--- a/TicketSystem/WebContent/css/default.css
+++ b/TicketSystem/WebContent/css/default.css
@@ -5,7 +5,7 @@ html, body {
 body {
 	margin: 0px;
 	padding: 0px;
-	background: url("../images/page-wrapper.png") repeat scroll 0 0 transparent;
+	background: url("../images/page-wrapper.jpg") repeat scroll 0 0 transparent;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 10pt;
 	color: #4F4F4F;
